force-app/main/default/objects/OrderTracking__c/OrderTracking__c.object-meta.xml
<CustomObject>
    <fullName>OrderTracking__c</fullName>
    <label>Order Tracking</label>
    <pluralLabel>Order Trackings</pluralLabel>
    <nameField>
        <label>Order Tracking Name</label>
        <type>AutoNumber</type>
        <displayFormat>OT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>Order ID</label>
        <required>true</required>
        <type>Text</type>
        <length>30</length>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User ID</label>
        <required>true</required>
        <type>Text</type>
        <length>30</length>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Text</type>
        <length>100</length>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
</CustomObject>