force-app/main/default/objects/OrderTracking__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>Order ID</label>
    <required>true</required>
    <type>Text</type>
    <length>30</length>
</CustomField>