force-app/main/default/objects/OrderTracking__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User ID</label>
    <required>true</required>
    <type>Text</type>
    <length>30</length>
</CustomField>